Fixed cards that were bugged on small screens Changed the way the association-stack figures out when to disable the stack : it is now a property coming from the outside

--- a/src/app/components/pages/landing-page/associative-experience-list/association-stack/association-stack.component.css
+++ b/src/app/components/pages/landing-page/associative-experience-list/association-stack/association-stack.component.css
@@ -1,3 +1,3 @@
 :host{
-  @apply relative min-w-[250px] max-w-[350px] min-h-[500px] grow rounded-xl font-mono m-3 p-5
+  @apply relative md:w-[350px] w-[250px] md:h-[500px] h-[700px] rounded-xl font-mono
 }
