--- a/src/app/components/pages/landing-page/associative-experience-list/card-openner/card-openner.component.css
+++ b/src/app/components/pages/landing-page/associative-experience-list/card-openner/card-openner.component.css
@@ -1,5 +1,5 @@
 :host{
-  @apply absolute top-0 left-0 duration-100 ease-out
+  @apply absolute top-0 left-0 duration-100 ease-out h-full w-full
 }
 
 :host(.slide-on-hover):hover {
